new/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-service
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-stickiness-enabled: "true" # Active les sticky sessions
    service.beta.kubernetes.io/aws-load-balancer-target-group-attributes: stickiness.enabled=true,stickiness.lb_cookie.duration_seconds=3600 
spec:
  selector:
    app: backend
  ports:
  - protocol: TCP
    port: 3000 
    targetPort: 3000 
  type: NodePort
