new/db-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: db-service
spec:
  selector:
    app: db
  ports:
  - protocol: TCP
    port: 5432       
    targetPort: 5432 
    nodePort: 30000
  type: NodePort
